<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.capture.CaptureFragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/camera_description_label" />

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textPreviewTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/text_preview_description_label"
                android:scrollbars="horizontal"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:visibility="gone" />

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_round_background"
            android:contentDescription="@string/capture_description_label"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/capture_label"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ocrInProgressTV"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:background="@drawable/rectangle_background"
            android:contentDescription="@string/ocr_description_label"
            android:elevation="10dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="16dp"
            android:paddingEnd="30dp"
            android:paddingBottom="16dp"
            android:text="@string/ocr_in_progress_label"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
